--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node ./bin/www",
-		"dev": "nodemon ./bin/www"
+		"dev": "nodemon ./bin/www",
+		"test": "jest"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
@@ -13,13 +14,16 @@
 		"debug": "~2.6.9",
 		"dotenv": "^16.4.7",
 		"express": "~4.16.1",
+		"fs": "^0.0.1-security",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
+		"multer": "^1.4.5-lts.1",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.5"
 	},
 	"devDependencies": {
+		"jest": "^29.7.0",
 		"nodemon": "^3.1.9"
 	}
 }
