--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.13.1",
 		"pg-hstore": "^2.3.4",
-		"sequelize": "^6.37.5"
+		"sequelize": "^6.37.5",
+		"xlsx": "^0.18.5"
 	},
 	"devDependencies": {
 		"jest": "^29.7.0",
