--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"morgan": "~1.9.1",
 		"multer": "^1.4.5-lts.1",
 		"pg": "^8.13.1",
+		"pg-boss": "^10.1.6",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.37.5",
 		"xlsx": "^0.18.5"
